<resources>
    <string name="app_name">FirstByte</string>
    <string name="appVersion">App Version: 1.0b</string>
    <string name="fbLogo">First Byte Logo</string>
    <string name="loading">Loading…</string>

    <!-- First Time Setup -->
    <string name="welcomingText">Welcome to FirstByte!</string>
    <string name="typeOfPcTitle">What type of PC are you building?</string>
    <string name="startYourJourney">Search and build your dream PC</string>

    <!-- Fragment Labels-->
    <string name="hardwareList">Components List</string>
    <string name="hardwareDetails">Hardware Details</string>
    <string name="pcBuildList">PC Build List</string>
    <string name="personalBuild">Personal Build</string>
    <string name="compareHardware">Compare Components</string>
    <string name="searchCategory">Search PC Parts</string>
    <string name="settingsLabel">Settings</string>
    <string name="helpLabel">Help</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offlineText">You are currently offline, to see the information on this page please connect back online.</string>
    <string name="ok_button">Change</string>
    <string name="cancel_button">Cancel</string>

    <!-- Toggle Drawer -->
    <string name="openDrawer">Open Toggle Drawer Navigation</string>
    <string name="closeDrawer">Close Toggle Drawer Navigation</string>
    <string name="headerImageDesc">Image of a computer, FirstByte Logo and what FirstByte is about in one line.</string>
    <string name="drawerNavigation">Navigation</string>
    <string name="firstByteInOneSentence">Search and build your computer</string>
    <string name="home">Home</string>
    <string name="savedPC_Parts">Saved PC Parts</string>
    <string name="searchPC_Parts">Search PC Parts</string>
    <string name="drawerSupport">Support</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Toolbar Menu -->
    <string name="searchBtn">Search</string>
    <string name="tipsBtn">Tips</string>
    <string name="moreMenu">Toolbar Menu</string>
    <string name="tips">Tips</string>
    <string name="toEmail">To Email</string>
    <string name="deletePC">Delete PC</string>
    <string name="sortList">Sort list</string>

    <string name="filterPriceSearch">Filter Price Range</string>
    <string name="filterSearch">Filter Search Results</string>

    <string name="minPriceTitle">Minimum Price</string>
    <string name="maxPriceTitle">Maximum Price</string>

    <string name="applyButton">Apply Filter</string>
    <string name="resetFilterButton">Reset Filter</string>

    <string name="sortListAscending">Alphabetical Ascending</string>
    <string name="sortListDescending">Alphabetical Descending</string>
    <string name="sortListPriceAscending">Price Low-High</string>
    <string name="sortListPriceDescending">Price High-Low</string>

    <!-- Bottom Navigation -->
    <string name="homeBtn">Home</string>
    <string name="pcBuildBtn">PC Builds</string>
    <string name="compareBtn">Compare</string>

    <!-- Home Screen -->
    <string name="homeTitle">Recommended Builds</string>
    <string name="recommendedTierTitle">Title of Tier Build</string>
    <string name="recommendedTierPrice">Price: %1$s%2$.2f</string>
    <string name="recommendedTierDescription">Tier Description.</string>
    <string name="sliderImageView">Displays recommended build pc parts on the home screen.</string>

    <!-- Compare Screen -->
    <string name="hardwareCompareTitle">%1$s Specs</string>
    <string name="hardwareCompareDescription">Details of what you can compare.</string>
    <string name="compareCategory">Compare %1$s\'s</string>
    <string name="selectCompareComponentPicture">Image of the component that will have its specifications compared.</string>

    <!-- Compare Hardware -->
    <string name="compareTitle">Compare %1$s</string>
    <string name="compareValues">Compare Component %1$s</string>
    <string name="compareSlot">Slot %1$d.</string>
    <string name="addComponentToCompare">Add Component</string>
    <string name="iconForCompareSpinner">Expand compare values selection</string>

    <!-- Category Search -->
    <string name="categoryText">Search Category Text</string>
    <string name="offlineSearchAll">Search All Saved Components</string>
    <string name="categoryImage">Image of component type that will be searched</string>
    <string-array name="categoriesDisplayText">
        <item>Search All Components</item>
        <item>Graphics Cards</item>
        <item>Processors</item>
        <item>Ram Sticks</item>
        <item>Power Supply Units</item>
        <item>Motherboards</item>
        <item>PC Storage</item>
        <item>Computer Cases</item>
        <item>CPU Heatsinks</item>
        <item>Fans</item>
    </string-array>

    <string-array name="categoryConnector">
        <item>all</item>
        <item>gpu</item>
        <item>cpu</item>
        <item>ram</item>
        <item>psu</item>
        <item>motherboard</item>
        <item>storage</item>
        <item>cases</item>
        <item>heatsink</item>
        <item>fan</item>
    </string-array>

    <!-- HardwareList -->
    <string name="hardwareListName">Component name in hardware list</string>
    <string name="hardwareListPrice">Component price in hardware list</string>
    <string name="hardwareListImage">Component Image in hardware list</string>

    <string-array name="filterPriceValues">
        <item>@integer/minFilterPriceSize</item>
        <item>@integer/maxFilterPriceSize</item>
    </string-array>

    <!-- PC BuildList -->
    <string name="createPC">Create new PC Build</string>
    <string name="pcBuildName">New-PC</string>
    <string name="totalPrice">Total Price: %1$s %2$.2f</string>
    <string name="buildIncomplete">Incomplete</string>
    <string name="buildComplete">Complete</string>
    <string name="pcBuildListImage">An image of the PCs case, or the add icon</string>

    <!-- PC Details-->
    <string name="enterNewPCName">Enter new PC name</string>
    <string name="pcNameHint">Enter PC name</string>
    <string name="componentPrice">Price: %1$2%2$.2f</string>
    <string name="componentOtherText">Display other text if applicable.</string>
    <string name="componentType">TYPE</string>
    <string name="incompatiblePart">Incompatible Part</string>
    <string name="partNeeded">Part Needed</string>
    <string name="addPartToBuild">Add %1$s to build.</string>
    <string name="pcPrice">Total RRP Price: %1$s%2$.2f</string>
    <string name="pcBuildImage">PC Build Image, which is the PCs selected case</string>
    <string name="pcbuildHardwareAddOrImage">An image showing the add hardware symbol, or the components image.</string>
    <string name="editRecommendedPC">Save recommended PC and edit it</string>
    <string name="saveToEditPCTest">Save the PC to edit it.</string>
    <string name="alertDeletePC">Are you sure you want to delete this PC Build?</string>

    <!-- HardwareDetails -->
    <string name="addHardware">Save %1$s</string>
    <string name="removeHardware">Remove %1$s</string>
    <string name="componentName">Component Name</string>
    <string name="componentDetailsImage">Image of the component</string>
    <string name="amazonIcon">Clickable image of the Amazon icon</string>
    <string name="scanIcon">Clickable image of the Scan.co.uk icon</string>
    <string name="componentSpecification">One line specification of the selected component</string>
    <string name="specificationDetail">Info about the specification</string>

    <!-- Shared Component values -->
    <string name="displayRrpPrice">RRP Price: %1$s%2$.2f</string>
    <string name="displayAmazonPrice">Amazon Price: %1$s%2$s</string>
    <string name="displayScanPrice">Scan.co.uk Price: %1$s%2$s</string>
    <string name="displayWattage">Wattage Usage: %1$d watts</string>
    <string name="displayDimensions">Dimensions: %1$scm</string>
    <string name="displayProcessorSocket">Processor Socket: %1$s</string>
    <string name="displayRamDDR">SDRAM DDR: %1$s</string>
    <string name="displayFanSlots">Number of fan slots: %1$d</string>
    <string name="licensesAndLibrariesGoHere">Here are the used Licenses and Libraries used in this App.</string>
    <!-- Gpu Display Text -->
    <string name="gpuDisplayCoreSpeed">Core Speed: %1$dMHz</string>
    <string name="gpuDisplayVRAMMemorySize">VRAM Memory Size: %1$dGB</string>
    <string name="gpuDisplayVRAMMemorySpeed">VRAM Memory Speed: %1$dMHz</string>
    <!-- Cpu Display Text -->
    <string name="cpuDisplayCoreSpeed">Average Core Speed: %1$.2fGHz</string>
    <string name="cpuDisplayCoreCount">Number of Cores: %1$d</string>
    <string name="cpuDisplayMultiThreaded">Is it Multithreaded? %1$s</string>
    <string name="cpuDisplayHasHeatsink">Does it come with a heatsink? %1$s</string>
    <!-- Ram Display Text -->
    <string name="ramDisplayMemorySize">Ram Memory Size: %1$dGB</string>
    <string name="ramDisplayMemorySpeed">Ram Memory Speed: %1$dMHz</string>
    <string name="ramDisplayNumOfSticks">This package comes with %1$d ram stick(s)</string>
    <!-- Psu Display Text -->
    <string name="psuDisplayWattageProduces">Power Supply wattage: %1$d</string>
    <string name="psuDisplayRating">Power Supply Rating: %1$s</string>
    <string name="psuDisplayIsModular">Is it Modular? %1$s</string>
    <!-- Storage Display Text -->
    <string name="storageDisplayCapacity">Storage Capacity: %1$dGB</string>
    <string name="storageDisplayType">Storage type: %1$s</string>
    <string name="storageDisplaySpeed">Drive performance: %1$dMB/s</string>
    <string name="storageDisplayExternal">Is it an external drive? %1$s</string>
    <!-- Motherboard Display Text -->
    <string name="motherboardDisplayBoardSize">Motherboard Size: %1$s</string>
    <string name="motherboardDisplayHaveWifi">Does this board come with wifi?  %1$s</string>
    <string name="motherboardDisplayHasUSB3">Does this board come with USB3+?  %1$s</string>
    <string name="motherboardDisplayPCIE">PCI-Express Version: %1$.1f</string>
    <string name="motherboardDisplayNVME">Does this board support NVME M.2 Drives?  %1$s</string>
    <!-- Case Display Text -->
    <string name="caseDisplayMotherboard">Max Motherboard size: %1$s</string>
    <string name="caseDisplayFanSizes">Fan slot sizes: %1$dmm Fans</string>
    <!-- Heatsink Display Text -->
    <string name="heatsinkDisplayAMDSocketMin">Earliest AMD CPU socket support: %1$s</string>
    <string name="heatsinkDisplayAMDSocketMax">Most recent AMD CPU socket support: %1$s</string>
    <string name="heatsinkDisplayINTELSocketMin">Earliest Intel CPU socket support: %1$s</string>
    <string name="heatsinkDisplayINTELSocketMax">Most recent Intel CPU socket support: %1$s</string>
    <!-- Fan Display Text -->
    <string name="fanDisplayFanSize">Fan Size: %1$dmm</string>
    <string name="fanDisplayFanSpeed">Fan Speed: %1$dRPM</string>

    <!-- Settings Text -->
    <string name="displaySettings">Display Settings</string>
    <string name="settingsRecommendedBuildListText">Recommended builds</string>
    <string name="nightMode">Night Mode</string>
    <string name="factorySettings">FactorySettings</string>
    <string name="resetDataText">Reset Data</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="alertResetData">Are you sure you want to remove all saved data?</string>

    <!-- Help Text -->
    <string name="helpContact">Help &amp; Contact</string>
    <string name="reportProblem">Report a problem</string>
    <string name="getInContact">Get in contact</string>
    <string name="helpTips">Help Tips</string>
    <string name="aboutSection">About</string>
    <string name="licenses">Licences</string>


</resources>