<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sortID"
        android:icon="@drawable/ic_sort"
        android:title="@string/sortList"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/alphabeticalAscendingID"
                android:icon="@drawable/ic_sort_ascending"
                android:title="@string/sortListAscending"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/alphabeticalDescendingID"
                android:icon="@drawable/ic_sort_descending"
                android:title="@string/sortListDescending"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/priceAscendingID"
                android:icon="@drawable/ic_price_ascending"
                android:title="@string/sortListPriceAscending"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/priceDescendingID"
                android:icon="@drawable/ic_price_descending"
                android:title="@string/sortListPriceDescending"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/filterID"
        android:icon="@drawable/ic_filter"
        android:title="@string/filterSearch"
        app:showAsAction="ifRoom" />
</menu>