<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editRecommendedPCID"
        android:icon="@drawable/ic_add_recommended_pc"
        android:title="@string/editRecommendedPC"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/moreMenuID"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/moreMenu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/emailID"
                android:icon="@drawable/ic_to_email"
                android:title="@string/toEmail"
                app:showAsAction="never" />
            <item
                android:id="@+id/tipsID"
                android:icon="@drawable/ic_tips"
                android:title="@string/tips"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>