<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compareSelectionLayoutRight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/standard_margins"
    android:layout_marginVertical="10dp"
    android:background="@color/secondaryColor"
    android:elevation="6dp">

    <TextView
        android:id="@+id/hardwareToCompareRight"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/hardwareCompareTitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/componentCompareImageRight" />

    <TextView
        android:id="@+id/compareDescriptionRight"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hardwareCompareDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardwareToCompareRight" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/componentCompareImageRight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/halved_standard_margins"
        android:contentDescription="@string/selectCompareComponentPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/textColor"
        android:elevation="3dp"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/enterComparisonBtnRight"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/object_pc_display_item"
        android:fontFamily="@font/rasa"
        android:text="@string/compareCategory"
        android:textSize="14sp"
        android:textStyle="bold"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/componentCompareImageRight"
        app:layout_constraintStart_toStartOf="@+id/componentCompareImageRight"
        app:layout_constraintTop_toBottomOf="@+id/componentCompareImageRight" />

</androidx.constraintlayout.widget.ConstraintLayout>