<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendedPCLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/recommendedTierTitle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/recommendedTierTitle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/recommendedTierPrice"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/recommendedTierPrice"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/recommendedTierTitle" />

    <TextView
        android:id="@+id/recommendedTierDescription"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/recommendedTierDescription"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/recommendedTierPrice" />

    <Button
        android:id="@+id/button"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_margin="@dimen/halved_standard_margins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>