<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pcListCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/halved_standard_margins"
    android:elevation="10dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pcListBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/object_add_pc"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personalBuildName"
        style="@style/headlineTextFB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp"
        android:padding="2dp"
        android:text="@string/pcBuildName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pcPriceOrCreation"
        app:layout_constraintStart_toStartOf="@id/pcListBtn" />

    <TextView
        android:id="@+id/pcPriceOrCreation"
        style="@style/headlineTextFB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:elevation="10dp"
        android:padding="2dp"
        android:text="@string/createPC"
        app:layout_constraintBottom_toBottomOf="@+id/pcListBtn"
        app:layout_constraintStart_toStartOf="@+id/pcListBtn"
        app:layout_constraintTop_toTopOf="@+id/pcListBtn" />

    <TextView
        android:id="@+id/completeOrIncomplete"
        style="@style/headlineTextFB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:padding="2dp"
        android:text="@string/buildIncomplete"
        app:layout_constraintStart_toStartOf="@+id/pcListBtn"
        app:layout_constraintTop_toBottomOf="@+id/pcPriceOrCreation" />

    <ImageView
        android:id="@+id/pcCaseImageOrAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margins"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_create_pc"
        android:contentDescription="@string/pcBuildListImage"
        android:elevation="10dp"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        app:layout_constraintBottom_toBottomOf="@id/pcListBtn"
        app:layout_constraintEnd_toEndOf="@id/pcListBtn"
        app:layout_constraintTop_toTopOf="@id/pcListBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>