<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compareSelectionLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/hardwareToCompare"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/hardwareCompareTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/componentCompareImage"
        app:layout_constraintTop_toTopOf="@+id/componentCompareImage" />

    <TextView
        android:id="@+id/compareDescription"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hardwareCompareDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/componentCompareImage"
        app:layout_constraintTop_toBottomOf="@+id/hardwareToCompare" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/componentCompareImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/halved_standard_margins"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/text_color"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/enterComparisonBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginVertical="10dp"
        android:background="#EF4040"
        android:fontFamily="@font/rasa"
        android:text="@string/compareCategory"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/componentCompareImage"
        app:layout_constraintStart_toStartOf="@+id/componentCompareImage"
        app:layout_constraintTop_toBottomOf="@+id/componentCompareImage" />

</androidx.constraintlayout.widget.ConstraintLayout>